--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,9 @@ cache:
   rules:
     - changes:
         - package.json
+    - exists:
+        - package.json
+      when: manual
 
 编译构建:
   stage: 编译构建
