--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ variables:
   IMAGE_NAME: "$DOCKER_REGION/$DOCKER_NAMESPACE/$APP_NAME:$CI_COMMIT_REF_NAME"
   DOCKER_FILE_PATH: "./Dockerfile"
   APP_DOMAIN: "md.xkcoding.com"
+  CONTAINER_PORT: 80
 
 stages:
   - 下载依赖
@@ -66,6 +67,7 @@ cache:
     - sed -i "s#__IMAGE_NAME__#${IMAGE_NAME}#g" ${APP_NAME}.yml
     - sed -i "s#__APP_NAME__#${APP_NAME}#g" ${APP_NAME}.yml
     - sed -i "s#__APP_DOMAIN__#${APP_DOMAIN}#g" ${APP_NAME}.yml
+    - sed -i "s#__CONTAINER_PORT__#${CONTAINER_PORT}#g" ${APP_NAME}.yml
     - cat ${APP_NAME}.yml
     - docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} ${DOCKER_REGION}
     - docker stack deploy -c ${APP_NAME}.yml ${APP_NAME}
@@ -81,6 +83,7 @@ cache:
     - sed -i "s#__IMAGE_NAME__#${IMAGE_NAME}#g" ${APP_NAME}.yml
     - sed -i "s#__APP_NAME__#${APP_NAME}#g" ${APP_NAME}.yml
     - sed -i "s#__APP_DOMAIN__#${APP_DOMAIN}#g" ${APP_NAME}.yml
+    - sed -i "s#__CONTAINER_PORT__#${CONTAINER_PORT}#g" ${APP_NAME}.yml
     - cat ${APP_NAME}.yml
     - docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD} ${DOCKER_REGION}
     - docker stack rm ${APP_NAME}
